Fix scoring somewhat. Winner dialog only shows once. Switch from ArrayList to LinkedList. Should have improved performance, but no change was detected.